# docker-sim

.github/workflows/: sim.yml
base/: Dockerfile.template  pyproject-n.toml  pyproject-nm.toml  pyproject-ns.toml  pyproject-nsm.toml  pyproject-nsmpt.toml
downstream/: Dockerfile  pyproject.toml
downstream/tests/: test_stub.py
