[project]
name="sim-downstream"
version="0.0.1"
dependencies=[
    "matplotlib==3.10.6",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pillow==12.2.0",
    "pytest==8.3.5",
    "pytest-json-report==1.5.0",
    "pytest-xdist==3.6.1",
    "requests==2.33.0",
    "scipy==1.16.3",
    "tabulate==0.9.0",
]
